--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,7 +9,7 @@
 * {
     margin: 0;
     padding: 0;
-    outline: 1px solid salmon;
+    /* outline: 1px solid salmon;  */
 }
 
 :focus {
@@ -25,6 +25,7 @@ html {
 img {
     display: block;
     max-width: 100%;
+    outline: 1px solid green;
 }
 
 input,
@@ -55,7 +56,7 @@ select {
 :root {
     --clr-dark: #222;
     --clr-white: #f9f9f9;
-    --clr-primary: #EF6155;
+    --clr-primary: #2f80ed;
     --clr-primary-strong: #f13422;
     --fs-h1: 4.2rem;
     --fs-h2: 3.15rem;
@@ -63,27 +64,35 @@ select {
     --fs-h4: 1.35rem;
     --fs-text: 1.15rem;
     --fs-lead: 1.35rem;
-    --border-radius: 8px;
-    --spacing-s: 1rem;
-    --spacing-m: 3rem;
+    --border-radius: 12px;
+    --spacing-s: 1em;
+    --spacing-m: 2em;
     --spacing-l: 6rem;
     --spacing-xl: 10rem;
-    --transition: ease background-color .2s;
-    --box-shadow: 0 3px 5px rgba(0, 0, 0, 0.28);
+    --transition: ease all .2s;
+    --box-shadow: 0px 4px 32px 0px rgba(0, 0, 0, 0.12);
     --min-col-width: 15rem;
+    --font-size-xxs: 0.625rem;
+    --font-size-xs: 0.75rem;
+    --font-size-s: 0.75rem;
+    --font-size-m: 0.875rem;
+    --font-size-l: 1.125rem;
+    --font-size-xl: 1.5rem;
+    --font-size-xxl: 1.5rem;
 }
+
+
 
 /*layout*/
 
 body {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
-    font-family: sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 100%;
     line-height: 1.5;
     text-rendering: optimizeSpeed;
-    background-color: var(--clr-white);
+    background-color: #f2f2f2;
     color: var(--clr-dark);
 }
 
@@ -93,16 +102,13 @@ header {
     place-self: center;
     text-align: center;
     border-bottom: 1px solid currentColor;
+    background-color: red;
 }
 
 main {
-    width: min(100%, 120ch);
+    width: min(100%, 64rem);
     margin: 0 auto;
-    padding: 5vh clamp(1rem, 5vw, 3rem) 1rem;
-}
-
-main > * {
-    margin-top: 1em;
+    padding: var(--spacing-s);
 }
 
 footer {
@@ -112,6 +118,7 @@ footer {
     place-self: center;
     text-align: center;
     border-top: 1px solid currentColor;
+    background-color: green;
 }
 
 /*utilities*/
@@ -128,25 +135,81 @@ footer {
     border: 0;
 }
 
-.container--grid {
+/*containers*/
+
+.grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(min(100%, var(--min-col-width)), 1fr));
-    padding: 1em;
-    gap: 1em;
+    grid-auto-flow: dense;
+    gap: var(--spacing-m);
+    margin: 3rem 0;
 }
 
-.container--flex {
+.grid--flexible {
+    grid-template-columns: repeat(auto-fit, minmax(min(100%, var(--min-col-width)), 1fr));
+}
+
+.grid--single {
+    grid-template-columns: 1fr;
+}
+
+.grid__item {
+    /* height: min-content; */
+    padding: var(--spacing-m);
+    background-color: #fff;
+    border-radius: var(--border-radius);
+    box-shadow: var(--box-shadow);
+}
+
+.grid__item--full {
+    grid-column: 1 / -1;
+}
+
+.grid__item--single {
+    grid-column-start: 1;
+}
+
+.grid__item--double {
+    grid-column-end: -1;
+}
+
+/* .grid__item--tall {
+    grid-row: span 2;
+} */
+
+@media screen and (min-width:50rem) {
+    .grid__item--double {
+        grid-column: 2 / -1;
+    }
+}
+
+/*card*/
+
+.card {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    /* padding: 2em; */
+    gap: 2em;
+}
+
+.card>* {
+    flex: 1 1 var(--min-col-width);
+}
+
+.card-nowrap {
+    flex-wrap: nowrap;
+}
+
+/* .container--flex {
     display: flex;
     flex-wrap: wrap;
     padding: 1em;
     gap: 1em;
 }
 
-.container--flex > * {
+.container--flex>* {
     flex: 1 1 var(--min-col-width);
-}
-
-
+} */
 
 /*typography */
 
@@ -215,14 +278,14 @@ a:not(.btn):hover {
     align-self: start;
     justify-content: center;
     min-width: 10ch;
-    min-height: 44px;
+    min-height: 46px;
     padding: 0.25em 1em;
-    transition: var(transition);
+    transition: var(--transition);
     border: 2px solid currentColor;
     border-radius: var(--border-radius);
     background-color: var(--clr-primary);
     color: var(--clr-white);
-    font-size: 1.125rem;
+    font-size: var(--font-size-l);
     line-height: 1.1;
     text-align: center;
     text-decoration: none;
@@ -235,7 +298,7 @@ a:not(.btn):hover {
 }
 
 .btn:hover {
-    background-color: var(--clr-primary-strong)
+    background-color: var(--clr-primary-strong);
 }
 
 .btn--alt:hover {
@@ -243,15 +306,38 @@ a:not(.btn):hover {
     color: var(--clr-white);
 }
 
-/*card*/
+/*skill list*/
 
-.card {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    padding: 2em;
-    gap: 2em;
+ul li {
+    list-style: none;
+    display: grid;
+    grid-template-columns: 8ch 1fr;
+    gap: 1em;
+    align-items: center;
+}
+
+.skill-bar {
+    /* background-color: blue; */
+    outline: 1px solid red;
+    height: 10px;
     border-radius: var(--border-radius);
-    background-color: #fff;
-    box-shadow: var(--box-shadow);
+}
+
+.skill-bar>* {
+    display: block;
+    background-color: var(--clr-primary);
+    height: 10px;
+    border-radius: var(--border-radius);
+}
+
+#html {
+    width: 39%;
+}
+
+#css {
+    width: 36%;
+}
+
+#javascript {
+    width: 26%;
 }
