--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -25,6 +25,7 @@ html {
 img {
     display: block;
     max-width: 100%;
+    border-radius: var(--border-radius);
     outline: 1px solid green;
 }
 
@@ -55,7 +56,6 @@ select {
 
 :root {
     --clr-dark: #222;
-    --clr-white: #f9f9f9;
     --clr-primary: #2f80ed;
     --clr-primary-strong: #f13422;
     --fs-h1: 4.2rem;
@@ -79,6 +79,17 @@ select {
     --font-size-l: 1.125rem;
     --font-size-xl: 1.5rem;
     --font-size-xxl: 1.5rem;
+    --clr-gray1: #333333;
+    --clr-gray2: #4f4f4f;
+    --clr-gray3: #828282;
+    --clr-gray4: #BDBDBD;
+    --clr-gray5: #E0E0E0;
+    --clr-gray6: #f2f2f2;
+    --clr-blue: #2e9cdc;
+    --clr-green: #28af60;
+    --clr-red: #EB5757;
+    --clr-dark: #100E1D;
+    --clr-white: #fff;
 }
 
 
@@ -90,10 +101,11 @@ body {
     flex-direction: column;
     font-family: 'Montserrat', sans-serif;
     font-size: 100%;
+    font-weight: 500;
     line-height: 1.5;
     text-rendering: optimizeSpeed;
     background-color: #f2f2f2;
-    color: var(--clr-dark);
+    color: var(--clr-gray2);
 }
 
 header {
@@ -152,6 +164,12 @@ footer {
     grid-template-columns: 1fr;
 }
 
+.info {
+    --min-col-width: 10rem;
+    margin: 1rem 0;
+    align-items: center;
+}
+
 .grid__item {
     /* height: min-content; */
     padding: var(--spacing-m);
@@ -196,6 +214,10 @@ footer {
     flex: 1 1 var(--min-col-width);
 }
 
+.card__content {
+    flex-grow: 10;
+}
+
 .card-nowrap {
     flex-wrap: nowrap;
 }
@@ -213,13 +235,13 @@ footer {
 
 /*typography */
 
-h2,
+/* h2,
 h3,
 h4 {
     font-weight: bold;
     line-height: 1.15;
     margin-bottom: 0.65em;
-}
+} */
 
 h1 {
     font-size: var(--fs-h1);
@@ -228,8 +250,27 @@ h1 {
 }
 
 h2 {
-    font-size: var(--fs-h2);
-    font-size: min(max(2.5rem, 4.5vw), var(--fs-h2));
+    font-size: var(--font-size-xl);
+    font-size: min(max(1.5rem, 2.5vw), var(--font-size-xl));
+    font-weight: 600;
+    color: var(--clr-gray2);
+}
+
+.subtitle {
+    font-size: var(--font-size-l);
+    color: var(--clr-gray3);
+}
+
+
+
+address {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    gap: 1em;
+    font-size: var(--font-size-l);
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
 }
 
 h3 {
@@ -242,13 +283,17 @@ h4 {
 
 p,
 li {
-    font-size: var(--fs-text);
+    font-size: var(--font-size-l);
+    color: var(--clr-gray3);
+    font-weight: 500;
+    line-height: 22px;
+    margin: 0 0 0.8em;
 }
 
-main p {
+/* main p {
     margin: 0 0 1rem;
     max-width: 80ch;
-}
+} */
 
 *+h2 {
     margin-top: 4rem;
